--- a/HOME/style/style.css
+++ b/HOME/style/style.css
@@ -2,6 +2,7 @@ body,
 html {
   /* background-color: coral; */
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: ff-tisa-sans-web-pro, sans-serif;
