--- a/Me/styling/me.css
+++ b/Me/styling/me.css
@@ -1,6 +1,7 @@
 body,
 html {
   height: auto;
+  width: 100%;
 }
 .container {
   height: 100%;
@@ -27,14 +28,17 @@ html {
   grid-area: skills;
 }
 
+.contact{
+  grid-area: contact;
+}
 /* end of rename for grid-area */
 
 /* styling the main section */
 .main-me{
   display: grid;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(5, auto);
   grid-template-columns: 1fr;
-  grid-template-areas: "historical" "career" "interests" "skills";
+  grid-template-areas: "historical" "career" "interests" "skills" "contact";
   padding: 30px 150px;
 }
 /* end of styling the main section */
@@ -55,6 +59,12 @@ section>div>p{
  display: none;
 }
 
+section>div>ul{
+  display: none;
+  list-style: none;
+  margin-left: -40px;
+}
+
 .h-and-p{
   display: grid;
   grid-template-columns: 1fr;
@@ -64,7 +74,15 @@ section>div>p{
 }
 
 .show{
-  display: block;
+  display: flex;
+  flex-direction: row;
+}
+
+.social{
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+
 }
 
 .details-container{
